--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,6 @@
 ## About
 
-> The English language can not fully capture the depth and complexity of my thoughts. So I'm incorporating Emoji into my speech to better express myself. Winky face.
+> I always wanted to be a programmer.
 
-You know the way you feel when you see a picture of two otters holding hands? That's how you're gonna feel every day. My mother cried the day I was born because she knew she’d never be prettier than me. You should make me your campaign manager. I was born for politics. I have great hair and I love lying. Captain? The kids want to know where Paulie the Pigeon is. I told them he got sucked up into an airplane engine, is that all right?
+From an early age, I was surrounded by games and technology, always fascinated by the possibility of creating my own software. I am self-taught - I started by trial and error with very simple applications in C++, then automation of tasks in Python, and finally I turned to create games in Unity engine using C# language. I've worked on two game projects in an international team.
+My main goal is to grow in the game development industry.
