--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,6 +1,8 @@
-## About
+## About me
 
 > I always wanted to be a programmer.
 
-From an early age, I was surrounded by games and technology, always fascinated by the possibility of creating my own software. I am self-taught - I started by trial and error with very simple applications in C++, then automation of tasks in Python, and finally I turned to create games in Unity engine using C# language. I've worked on two game projects in an international team.
+From an early age, I was surrounded by games and technology, always fascinated by the possibility of creating my own software. 
+I am self-taught, I started by trial and error with very simple applications in C++, then automation of tasks in Python, and finally I turned to create games in Unity engine using C# language.
+I've worked on two game projects in an international team.
 My main goal is to grow in the game development industry.
