--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,5 @@
 # Hi, I'm Damian
 
 I'm aiming to be a professional game developer.
+
+<img src="https://avatars.githubusercontent.com/u/18118467?v=4" alt="My photo"/>
