Try to add a photo

--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,5 +1,6 @@
 # Hi, I'm Damian
 
+<img align="right" src="src\@lekoarts\gatsby-theme-cara\sections\Me.png" alt="My photo"/>
+
 I'm aiming to be a professional game developer.
 
-<img src="https://avatars.githubusercontent.com/u/18118467?v=4" alt="My photo"/>
