--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,4 +1,4 @@
-<img align="right" src="src\@lekoarts\gatsby-theme-cara\sections\Me.png" alt="My photo"/>
+<img align="right" src="Me.png" alt="My photo"/>
 # Hi, I'm Damian
 I'm aiming to be a professional game developer.
 
