--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,4 +1,4 @@
-<img align="right" src="https://raw.githubusercontent.com/exostin/exostin.github.io/main/src/%40lekoarts/gatsby-theme-cara/sections/Me.png" alt="My photo"/>
+<img src="https://raw.githubusercontent.com/exostin/exostin.github.io/main/src/%40lekoarts/gatsby-theme-cara/sections/Me.png" align="right" alt="My photo"/>
 
 
 # Hi, I'm Damian
