Add super cube boy to the projects section

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -5,26 +5,26 @@
   link="https://exostin.github.io/UnityBattleships/"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  Battleships game I made using C# and Unity.
+  Battleships game I made using C# and Unity. <a href="https://github.com/exostin/UnityBattleships">(repository)</a>
 </ProjectCard>
 <ProjectCard
-  title="Lorem"
-  link=""
+  title="Super Cube Boy 3D"
+  link="https://github.com/exostin/SuperCubeBoy3D"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  Ipsum.
+  A minimalistic endless runner game. Download <a href="https://github.com/exostin/SuperCubeBoy3D/releases">here.</a>
 </ProjectCard>
 <ProjectCard
-  title="Lorem"
-  link="https://www.lekoarts.de/garden/adding-a-draft-feature-to-gatsby?utm_source=cara&utm_medium=Theme"
+  title=""
+  link=""
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
 >
-  Ipsum.
+  To be done...
 </ProjectCard>
 <ProjectCard
-  title="Lorem"
-  link="https://www.lekoarts.de/design/introducing-the-theme-ui-plugin-for-figma?utm_source=cara&utm_medium=Theme"
+  title=""
+  link=""
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
 >
-  Ipsum.
+  To be done...
 </ProjectCard>
