Update projects section

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -2,17 +2,17 @@
 
 <ProjectCard
   title="Unity Battleships"
-  link="https://exostin.github.io/UnityBattleships/"
+  link="https://github.com/exostin/UnityBattleships"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  Battleships game I made using C# and Unity. <a href="https://github.com/exostin/UnityBattleships">(repository)</a>
+  Battleships game I made using C# and Unity. <a href="https://exostin.github.io/UnityBattleships/">Play it on your browser!</a>
 </ProjectCard>
 <ProjectCard
   title="Super Cube Boy 3D"
   link="https://github.com/exostin/SuperCubeBoy3D"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  A minimalistic endless runner game. Download <a href="https://github.com/exostin/SuperCubeBoy3D/releases">here.</a>
+  A minimalistic endless runner game. <a href="https://github.com/exostin/SuperCubeBoy3D/releases">Download and play it on your computer!</a>
 </ProjectCard>
 <ProjectCard
   title=""
