Change project cards

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -5,14 +5,14 @@
   link="https://exostin.github.io/UnityBattleships/"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  Battleships game I made using C# and Unity. (Click the card to play it on your browser!)
+  Battleships game I made using C# and Unity.
 </ProjectCard>
 <ProjectCard
   title="Super Cube Boy 3D"
   link="https://github.com/exostin/SuperCubeBoy3D/releases"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  A minimalistic endless runner game. (Click the card to download and play it on your computer!)
+  A minimalistic endless runner game.
 </ProjectCard>
 <ProjectCard
   title=""
