Add expiry date to projects

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -15,11 +15,11 @@
   A minimalistic endless runner game.
 </ProjectCard>
 <ProjectCard
-  title=""
-  link=""
+  title="Expiry Date"
+  link="https://github.com/exostin/ExpiryDate/releases"
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
 >
-  To be done...
+  City builder game set during a climatic calamity with a hint of fantasy, created in a team of ten as part of a Polish game development championship - "Turniej Trójgamiczny"
 </ProjectCard>
 <ProjectCard
   title=""
