Update projects page

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,25 +1,25 @@
 ## Projects
 
 <ProjectCard
-  title="Unity Battleships"
+  title="Battleships"
   link="https://exostin.github.io/UnityBattleships/"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  Battleships game I made using C# and Unity.
+  A browser battleships game. (Unity, C#)
 </ProjectCard>
 <ProjectCard
   title="Super Cube Boy 3D"
   link="https://github.com/exostin/SuperCubeBoy3D/releases"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  A minimalistic endless runner game.
+  A minimalistic endless runner game. (Unity, C#)
 </ProjectCard>
 <ProjectCard
   title="Expiry Date"
   link="https://github.com/exostin/ExpiryDate/releases"
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
 >
-  City builder game set during a climatic calamity with a hint of fantasy, created in a team of ten as part of a Polish game development championship - "Turniej Trójgamiczny"
+  City builder game set during a climatic calamity with a hint of fantasy, created in a team of ten as part of a Polish game development championship - "Turniej Trójgamiczny". (Unity, C#)
 </ProjectCard>
 <ProjectCard
   title=""
