Update battleships link and about me page

--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -4,5 +4,5 @@
 
 From an early age, I was surrounded by games and technology, always fascinated by the possibility of creating my own software. 
 I am self-taught, I started by trial and error with very simple applications in C++, then automation of tasks in Python, and finally I turned to create games in Unity engine using C# language.
-I've worked on two game projects in an international team.
+I've worked on two game projects in an international team. I';m currently leading a team of ten for a Polish game making championship - Turniej Trójgamiczny!
 My main goal is to grow in the game development industry.
