--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -2,7 +2,7 @@
 
 <ProjectCard
   title="Battleships"
-  link="https://exostin.github.io/UnityBattleships/"
+  link="https://damiandorosz.me/UnityBattleships/"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
   A browser battleships game. (Unity, C#)
