--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,8 +1,6 @@
 ## About me
 
-> I always wanted to be a programmer.
+I have always been surrounded by technology and games, endlessly fascinated by the possibility of creating my own software that could captivate others or simply carry out a task I want it to do.
 
-From an early age, I was surrounded by games and technology, always fascinated by the possibility of creating my own software. 
-I am self-taught, I started by trial and error with very simple applications in C++, then automation of tasks in Python, and finally I turned to create games in Unity engine using C# language.
-I've worked on two game projects in an international team. I'm currently a team leader and a developer in a group of ten for a Polish game making championship - Turniej Trójgamiczny!
-My main goal is to grow in the game development industry.
+I had worked on two game projects in an international team. Currently I am a game developer and the team leader at [Expiry Date](https://github.com/exostin/ExpiryDate). It is a city builder game set during a climatic calamity, created in a team of ten as part of a Polish game development championship - ["Turniej Trójgamiczny"](https://www.t3g.pl/).
+My main goal is to grow in the game development industry and create cool things!
